infra/controllers/base/istio/cilium-allow-ambient.yaml
# https://istio.io/latest/docs/ambient/install/platform-prerequisites/#cilium
# https://docs.cilium.io/en/stable/network/kubernetes/policy/
---
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "allow-ambient-hostprobes"
spec:
  description: "Allows SNAT-ed kubelet health check probes into ambient pods"
  enableDefaultDeny:
    egress: false
    ingress: false
  endpointSelector: {}
  ingress:
  - fromCIDR:
    - "169.254.7.127/32"
    # Allow all IPv4's Private Network Ranges to avoid break the communication between the nodes & pods
    - 10.0.0.0/8
    - 172.16.0.0/12
    - 192.168.0.0/16
